--- a/TUGAS_0A.ipynb
+++ b/TUGAS_0A.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -17,7 +17,7 @@
     "import csv\n",
     "\n",
     "def saveToCsv(result):\n",
-    "    with open('./prediction.csv', 'w') as csvfile:\n",
+    "    with open('./prediction.csv', 'w', newline='') as csvfile:\n",
     "        lines = csv.writer(csvfile)\n",
     "\n",
     "        for x in range(len(result)):\n",
@@ -63,7 +63,8 @@
     "        else:\n",
     "            result.append([testSet[x][0], 'SUPPORT'])\n",
     "    \n",
-    "    result.insert(0, ['nama', 'role'])\n",
+    "    result.insert(0, ['name', 'role'])\n",
+    "\n",
     "    saveToCsv(result)\n",
     "    \n",
     "main()\n"
