--- a/TUGAS_0A.ipynb
+++ b/TUGAS_0A.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test set:  51\n"
+      "Test set:  53\n"
      ]
     }
    ],
@@ -30,7 +30,7 @@
     "\n",
     "        dataset = list(lines)\n",
     "\n",
-    "        for x in range(1, 52):\n",
+    "        for x in range(53):\n",
     "            for y in range(5):\n",
     "                dataset[x][y] = dataset[x][y]\n",
     "\n",
@@ -44,11 +44,11 @@
     "    testSet = []\n",
     "\n",
     "    testSet = loadDataset('./test.csv')\n",
-    "    print('Test set: ', repr(len(testSet)))\n",
+    "    print('Test set: ', len(testSet))\n",
     "    \n",
     "    \n",
     "    result = []\n",
-    "    for x in range(len(testSet)):\n",
+    "    for x in range(1,len(testSet)):\n",
     "        \n",
     "        if int(testSet[x][1]) >= 270:\n",
     "            result.append([testSet[x][0], 'MARKSMAN'])\n",
